--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@
 # executed from 'project/build' with 'cmake ../'.
 cmake_minimum_required(VERSION 2.6)
 find_package(Rock)
+set(ROCK_TEST_ENABLED ON)
 rock_init(vizkit3dDebugDrawings 0.1)
 rock_standard_layout()
