Add color to drawing functions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,12 @@
 rock_library(vizkit3dDebugDrawings
     SOURCES
         DrawingManager.cpp
+        DrawingCommands/SphereCommand.cpp
     HEADERS 
+        DebugDrawCommand.h
+        DrawingCommands/SphereCommand.h
         DebugDrawing.h
         Drawing.h
         DrawingManager.h
-    DEPS_PKGCONFIG vizkit3d osgViz)
+    DEPS_PKGCONFIG vizkit3d osgViz )
 
