move gobal functions to object file to allow inclusion in multiple objs without linker error

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,11 +2,12 @@ rock_library(vizkit3dDebugDrawings
     SOURCES
         DrawingManager.cpp
         DrawingCommands/SphereCommand.cpp
+        DebugDrawing.cpp
     HEADERS 
         DebugDrawCommand.h
         DrawingCommands/SphereCommand.h
         DebugDrawing.h
         Drawing.h
         DrawingManager.h
-    DEPS_PKGCONFIG vizkit3d osgViz )
+    DEPS_PKGCONFIG vizkit3d osgViz base-types)
 
