Towards command pattern

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,19 @@
 rock_library(vizkit3dDebugDrawings
     SOURCES
         DrawingManager.cpp
-        DrawingCommands/SphereCommand.cpp
         DebugDrawing.cpp
         DebugDrawingColors.cpp
+        CommandDispatcher.cpp
+        commands/DrawCommand.cpp
+        commands/primitives/DrawSphereCommand.cpp
     HEADERS 
-        DebugDrawCommand.h
-        DrawingCommands/SphereCommand.h
         DebugDrawing.h
         Drawing.h
         DrawingManager.h
         DebugDrawingColors.h
+        CommandDispatcher.h
+        commands/DrawCommand.h
+        commands/Command.h
+        commands/primitives/DrawSphereCommand.h
     DEPS_PKGCONFIG vizkit3d osgViz base-types)
 
