--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_definitions(-DENABLE_DEBUG_DRAWINGS)
 rock_executable(draw_test draw_test.cpp
     DEPS 
-        vizkit3dDebugDrawings
+        vizkit3d_debug_drawings
     DEPS_PKGCONFIG 
         base-types 
 )
