--- a/viz/CMakeLists.txt
+++ b/viz/CMakeLists.txt
@@ -1,6 +1,6 @@
 rock_vizkit_plugin(vizkit3dDebugDrawings-viz
     DrawingVisualization.cpp
-    DEPS vizkit3dDebugDrawings
+    DEPS vizkit3d_debug_drawings
     MOC DrawingVisualization.hpp
     HEADERS DrawingVisualization.hpp)
 
