--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,3 +5,14 @@ rock_executable(draw_test draw_test.cpp
     DEPS_PKGCONFIG 
         base-types 
 )
+
+find_package(Boost COMPONENTS serialization iostreams)
+
+rock_testsuite(serialization_test 
+    suite.cpp
+    serialization_test.cpp
+    DEPS vizkit3d_debug_drawings
+    DEPS_PLAIN
+        Boost_SERIALIZATION
+        Boost_IOSTREAMS
+)
