--- a/viz/CMakeLists.txt
+++ b/viz/CMakeLists.txt
@@ -1,6 +1,11 @@
 rock_vizkit_plugin(vizkit3dDebugDrawings-viz
     DrawingVisualization.cpp
-    DEPS vizkit3d_debug_drawings
-    MOC DrawingVisualization.hpp
-    HEADERS DrawingVisualization.hpp)
-
+    DebugDrawingVisualization.cpp
+    DEPS
+        vizkit3d_debug_drawings
+    MOC
+        DrawingVisualization.hpp
+        DebugDrawingVisualization.hpp
+    HEADERS
+        DrawingVisualization.hpp
+        DebugDrawingVisualization.hpp)
