added polyline command

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ rock_library(vizkit3d_debug_drawings
         commands/primitives/DrawRingCommand.cpp
         commands/primitives/DrawWireframeBoxCommand.cpp
         commands/primitives/DrawArrowCommand.cpp
+        commands/primitives/DrawPolyLineCommand.cpp
     HEADERS 
         DebugDrawing.h
         Drawing.h
@@ -25,6 +26,7 @@ rock_library(vizkit3d_debug_drawings
         commands/primitives/DrawRingCommand.h
         commands/primitives/DrawWireframeBoxCommand.h
         commands/primitives/DrawArrowCommand.h
+        commands/primitives/DrawPolyLineCommand.h
     DEPS_PKGCONFIG
         vizkit3d
         osgViz
