--- a/viz/CMakeLists.txt
+++ b/viz/CMakeLists.txt
@@ -1,11 +1,22 @@
 rock_vizkit_plugin(vizkit3dDebugDrawings-viz
     DrawingVisualization.cpp
-    DebugDrawingVisualization.cpp
     DEPS
         vizkit3d_debug_drawings
     MOC
         DrawingVisualization.hpp
-        DebugDrawingVisualization.hpp
     HEADERS
         DrawingVisualization.hpp
-        DebugDrawingVisualization.hpp)
+)
+        
+        
+rock_vizkit_plugin(vizkit3dDebugCommand-viz
+    DebugDrawingVisualization.cpp
+    DEPS
+        vizkit3d_debug_drawings
+        vizkit3dDebugDrawings-viz
+    MOC
+        DebugDrawingVisualization.hpp
+    HEADERS
+        DebugDrawingVisualization.hpp
+)
+         
