towards plot command

--- a/viz/CMakeLists.txt
+++ b/viz/CMakeLists.txt
@@ -7,6 +7,20 @@ rock_vizkit_plugin(vizkit3dDebugDrawings-viz
     HEADERS
         DrawingVisualization.hpp
 )
+
+rock_vizkit_plugin(vizkit3dDebugDrawingsPlot-viz
+    DebugPlotVisualization.cpp
+    qcustomplot/qcustomplot.cpp
+    DEPS
+        vizkit3d_debug_drawings
+    MOC
+        DebugPlotVisualization.hpp
+        qcustomplot/qcustomplot.h
+    HEADERS
+        DebugPlotVisualization.hpp
+        qcustomplot/qcustomplot.h
+)
+  
         
         
 rock_vizkit_plugin(vizkit3dDebugCommand-viz
