--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,8 @@ rock_library(vizkit3d_debug_drawings
         commands/primitives/DrawArrowCommand.cpp
         commands/primitives/DrawPolyLineCommand.cpp
         commands/primitives/DrawCylinderCommand.cpp
+        commands/primitives/DrawAxesCommand.cpp
+        
     HEADERS 
         DebugDrawing.h
         Drawing.h
@@ -39,7 +41,8 @@ rock_library(vizkit3d_debug_drawings
         commands/primitives/DrawWireframeBoxCommand.h
         commands/primitives/DrawArrowCommand.h
         commands/primitives/DrawPolyLineCommand.h
-        commands/primitives/DrawCylinderCommand.h
+        commands/primitives/DrawPolyLineCommand.h
+        commands/primitives/DrawAxesCommand.h
         commands/BoostSerializationExports.h
     DEPS_PKGCONFIG
         vizkit3d
