remove warning about qt4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(Rock)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(ROCK_TEST_ENABLED ON)
 rock_init(vizkit3d_debug_drawings 0.1)
+rock_find_qt4()
 rock_standard_layout()
 
-add_subdirectory(test)
+# add_subdirectory(test)
