experiments with prefixes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,15 @@
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 option(WITH_PORTS "Build with rock port support" ON)
+add_definitions(-DV3DD_CHANNEL_PREFIX="default")
 
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
+
 set(SOURCE_FILES
         DrawingManager.cpp
+        DeclaredChannels.cpp
         DebugDrawing.cpp
         DebugDrawingColors.cpp
         commands/DrawCommand.cpp
@@ -34,6 +37,7 @@ set(HEADER_FILES
         DebugDrawing.hpp
         Drawing.hpp
         DrawingManager.hpp
+        DeclaredChannels.hpp
         DebugDrawingColors.hpp
         PlotDataPoint.hpp
         commands/DrawCommand.hpp
