towards a buildsystem without rock

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
-# CMakeLists.txt has to be located in the project folder and cmake has to be
-# executed from 'project/build' with 'cmake ../'.
-cmake_minimum_required(VERSION 2.6)
-find_package(Rock)
-set(CMAKE_CXX_STANDARD_REQUIRED 11)
-set(ROCK_TEST_ENABLED ON)
-rock_init(vizkit3d_debug_drawings 0.1)
-rock_find_qt4()
-rock_standard_layout()
+cmake_minimum_required(VERSION 3.10)
+project(vizkit3d_debug_drawings VERSION 0.1)
 
+option(WITH_PORTS "Build with rock port support" OFF)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+add_subdirectory(src)
+#add_subdirectory(test)
