--- a/src/vizkit3d_debug_drawings.pc.in
+++ b/src/vizkit3d_debug_drawings.pc.in
@@ -1,7 +1,7 @@
 prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=@CMAKE_INSTALL_PREFIX@
 libdir=${prefix}/lib
-includedir=${prefix}/include
+includedir=${prefix}/include/@TARGET_NAME@
 
 Name: @TARGET_NAME@
 Description: @PROJECT_DESCRIPTION@
